# aoc2021

./: bullet-1.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21-2.py  day21.py  day22-s3.txt  day22-s4.txt  day22-s5.txt  day22.py  day23.py  day23_2.py  day24.py  day24_gen.py  day24_man.py  day24_part1-o.py  day24_part1.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml  visualShapeBench.json_0.json
